# seatris

./: .gitignore  ACKNOWLEDGEMENTS  HISTORY  Makefile.in  README  TODO  aclocal.m4  autoconf.hin  block.h  blockstuff.c  blockstuff.h  configure  configure.in  disp_ncurses.c  disp_ncurses.h  example.seatrisrc  fieldstuff.c  fieldstuff.h  parse.c  parse.h  readcfg.c  readcfg.h  scoring.c  scoring.h  seatris.6  seatris.c  seatris.h  seatris.spec
