dnl Process this file with autoconf to produce a configure script.
dnl Written by Jonathan McDowell. Helped by autoscan and the Lynx
dnl configure.in.

AC_INIT(seatris.h)
AC_CONFIG_HEADER(autoconf.h:autoconf.hin)

dnl CF_CHECK_CACHE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
CF_NCURSES_CPPFLAGS
CF_NCURSES_LIBS
dnl AC_CHECK_LIB(ncurses, initscr)
dnl if test "$ac_cv_lib_ncurses_initscr" != yes; then
dnl	AC_CHECK_LIB(curses, initscr)
dnl	if test "$ac_cv_lib_curses_initscr" != yes; then
dnl		AC_MSG_ERROR(seatris needs curses or ncurses to build.)
dnl		exit 1
dnl	fi
dnl fi

CF_FANCY_CURSES
CF_NCURSES_VERSION
CF_NCURSES_BROKEN
CF_COLOR_CURSES

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h unistd.h getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(select strdup)

AC_OUTPUT(Makefile)
